--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.MovieDetailActivity"></activity>
+        <activity android:name=".view.TvShowDetailActivity"></activity>
+        <activity android:name=".view.MovieDetailActivity" />
         <activity android:name=".view.SettingActivity" />
         <activity
             android:name=".view.MainActivity"
